[package]
name = "windortortent"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["fs", "process", "time"] }
win32_notif = "0.7"
windows = { version = "0.61", features = [
  "Management_Deployment",
  "ApplicationModel",
] }
windows-collections = "0.2"
windows-future = "0.2"
