[package]
name = "windortortent"
version = "0.1.0"
edition = "2024"

[dependencies]
windows = { version = "0.61", features = [
  "Management_Deployment",
  "ApplicationModel",
  "Win32_UI_Shell",
  "Win32_System_Registry",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Security",
  "Win32_System_Com",
  "Win32_System_Threading",
  "Win32_System_Antimalware",
  "Win32_Security_Authorization",
  "Win32_System_ApplicationInstallationAndServicing",
] }
tokio = { version = "1", features = [
  "fs",
  "process",
  "time",
  "test-util",
  "macros",
] }
zip = { version = "4" }
windows-core = "0.61"
windows-future = "0.2"
serde = { version = "1", features = ["derive"] }
serde-xml-rs = "0.8"
toml = "0.8.23"

[features]
deafult = []
metadata = []
